--- a/app/src/main/res/layout/activity_descricao_vacina.xml
+++ b/app/src/main/res/layout/activity_descricao_vacina.xml
@@ -4,102 +4,94 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.neri.alexa.cartaovacina.DescricaoVacinaActivity">
+    tools:context="com.neri.alexa.cartaovacina.DescricaoVacinaActivity"
+    tools:layout_editor_absoluteY="81dp"
+    tools:layout_editor_absoluteX="0dp">
 
     <TextView
         android:id="@+id/textViewNome"
-        android:layout_width="150dp"
-        android:layout_height="45dp"
+        android:layout_width="273dp"
+        android:layout_height="42dp"
+        android:layout_marginEnd="35dp"
+        android:layout_marginStart="35dp"
+        android:layout_marginTop="51dp"
         android:text="nome"
         android:textSize="30sp"
         android:textStyle="bold"
-        tools:layout_constraintTop_creator="1"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintHorizontal_bias="0.505"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintTop_creator="1" />
 
     <TextView
         android:id="@+id/textViewIdade"
         android:layout_width="0dp"
-        android:layout_height="54dp"
+        android:layout_height="45dp"
         android:text="idade"
         android:textSize="24sp"
         tools:layout_constraintTop_creator="1"
         tools:layout_constraintRight_creator="1"
-        tools:layout_constraintBottom_creator="1"
-        android:layout_marginStart="13dp"
-        app:layout_constraintBottom_toBottomOf="@+id/textViewDoenca"
-        android:layout_marginEnd="13dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="71dp"
+        app:layout_constraintRight_toRightOf="@+id/textViewNome"
+        android:layout_marginTop="25dp"
+        app:layout_constraintTop_toBottomOf="@+id/textViewNome"
         tools:layout_constraintLeft_creator="1"
-        android:layout_marginBottom="63dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/textViewNome" />
-
-    <TextView
-        android:id="@+id/textViewDoenca"
-        android:layout_width="0dp"
-        android:layout_height="47dp"
-        android:lineSpacingExtra="18sp"
-        android:text="Doenca"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintBottom_creator="1"
-        app:layout_constraintBottom_toTopOf="@+id/TextViewQtd"
-        android:layout_marginStart="15dp"
-        android:layout_marginEnd="15dp"
-        app:layout_constraintRight_toRightOf="parent"
-        tools:layout_constraintLeft_creator="1"
-        android:layout_marginBottom="93dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintLeft_toLeftOf="@+id/textViewNome"
+        app:layout_constraintHorizontal_bias="0.0" />
 
     <TextView
         android:id="@+id/textViewDose"
-        android:layout_width="0dp"
-        android:layout_height="47dp"
+        android:layout_width="119dp"
+        android:layout_height="40dp"
         android:text="Dose"
         android:textSize="18sp"
         tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="220dp"
+        tools:layout_constraintBottom_creator="1"
+        app:layout_constraintBottom_toTopOf="@+id/textView6"
+        android:layout_marginTop="24dp"
         tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginBottom="21dp"
+        app:layout_constraintLeft_toLeftOf="@+id/textView"
+        app:layout_constraintTop_toTopOf="@+id/textView" />
 
     <TextView
         android:id="@+id/TextViewQtd"
-        android:layout_width="0dp"
-        android:layout_height="59dp"
+        android:layout_width="217dp"
+        android:layout_height="46dp"
         android:text="Quantidade"
         android:textSize="18sp"
+        android:layout_marginStart="4dp"
         tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintBottom_creator="1"
-        app:layout_constraintBottom_toTopOf="@+id/textViewVia"
-        app:layout_constraintRight_toRightOf="@+id/textViewDoenca"
-        android:layout_marginTop="30dp"
-        app:layout_constraintTop_toBottomOf="@+id/textViewDose"
+        android:layout_marginTop="17dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView6"
         tools:layout_constraintLeft_creator="1"
-        android:layout_marginBottom="36dp"
-        app:layout_constraintLeft_toLeftOf="@+id/textViewDoenca" />
+        app:layout_constraintLeft_toLeftOf="@+id/textView6"
+        android:layout_marginLeft="40dp" />
 
     <TextView
-        android:id="@+id/textViewVia"
-        android:layout_width="0dp"
-        android:layout_height="60dp"
-        android:text="via"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintBottom_creator="1"
-        android:layout_marginStart="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintRight_toRightOf="parent"
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Dose:"
+        tools:layout_constraintTop_creator="1"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/textViewIdade"
         tools:layout_constraintLeft_creator="1"
-        android:layout_marginBottom="59dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintLeft_toLeftOf="@+id/textViewIdade" />
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Quantidade:"
+        android:layout_marginStart="32dp"
+        tools:layout_constraintTop_creator="1"
+        android:layout_marginTop="51dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginLeft="51dp" />
+
 </android.support.constraint.ConstraintLayout>
