--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,12 +16,13 @@
         android:onClick="onClick"
         android:text="Vacina"
         android:textStyle="bold"
+        app:layout_constraintRight_toLeftOf="@+id/guideline3"
         tools:layout_constraintRight_creator="1"
-        app:layout_constraintRight_toRightOf="@+id/buttonCartao"
-        app:layout_constraintBaseline_toBaselineOf="@+id/buttonLocais"
-        tools:layout_constraintBaseline_creator="1"
+        tools:layout_constraintBottom_creator="1"
+        app:layout_constraintBottom_toBottomOf="parent"
         tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toRightOf="@+id/buttonCartao" />
+        android:layout_marginBottom="47dp"
+        app:layout_constraintLeft_toLeftOf="@+id/guideline3" />
 
     <Button
         android:id="@+id/buttonCadastroUsusario"
@@ -36,63 +37,59 @@
         tools:layout_constraintRight_creator="1"
         tools:layout_constraintBottom_creator="1"
         app:layout_constraintBottom_toTopOf="@+id/buttonCartao"
+        android:layout_marginStart="3dp"
         android:layout_marginEnd="3dp"
-        android:layout_marginTop="1dp"
         tools:layout_constraintLeft_creator="1"
-        android:layout_marginBottom="1dp"
-        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginBottom="3dp"
+        app:layout_constraintLeft_toLeftOf="@+id/imageView3"
         app:layout_constraintTop_toTopOf="@+id/buttonVacina" />
 
     <Button
         android:id="@+id/buttonLocais"
-        android:layout_width="118dp"
+        android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginEnd="3dp"
+        android:layout_marginStart="3dp"
+        android:backgroundTint="@color/colorAccent"
         android:onClick="onClick"
         android:text="Locais"
+        android:textColor="@android:color/background_light"
         android:textStyle="bold"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintBottom_creator="1"
         app:layout_constraintBottom_toTopOf="@+id/buttonImc"
-        android:layout_marginStart="54dp"
-        android:layout_marginEnd="53dp"
-        app:layout_constraintRight_toRightOf="@+id/imageView3"
-        android:layout_marginTop="4dp"
-        app:layout_constraintTop_toBottomOf="@+id/imageView3"
+        app:layout_constraintLeft_toRightOf="@+id/buttonVacina"
+        app:layout_constraintRight_toRightOf="@+id/buttonImc"
+        app:layout_constraintTop_toTopOf="@+id/buttonVacina"
+        tools:layout_constraintBottom_creator="1"
         tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="@+id/buttonImc"
-        app:layout_constraintHorizontal_bias="0.666"
-        app:layout_constraintVertical_bias="0.0" />
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintTop_creator="1" />
 
     <Button
         android:id="@+id/buttonImc"
-        android:layout_width="174dp"
-        android:layout_height="0dp"
+        android:layout_width="0dp"
+        android:layout_height="48dp"
+        android:layout_marginEnd="6dp"
         android:onClick="onClick"
         android:text="IMC"
         android:textStyle="bold"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintBottom_creator="1"
-        android:layout_marginStart="187dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginTop="1dp"
+        app:layout_constraintBaseline_toBaselineOf="@+id/buttonCartao"
+        app:layout_constraintLeft_toRightOf="@+id/buttonCartao"
+        app:layout_constraintRight_toRightOf="parent"
+        tools:layout_constraintBaseline_creator="1"
         tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline4" />
+        tools:layout_constraintRight_creator="1" />
 
     <Button
         android:id="@+id/buttonCartao"
-        android:layout_width="0dp"
+        android:layout_width="173dp"
         android:layout_height="0dp"
         android:onClick="onClick"
         android:text="Cartao"
         android:textStyle="bold"
-        app:layout_constraintRight_toLeftOf="@+id/buttonImc"
         tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
         tools:layout_constraintBottom_creator="1"
+        android:layout_marginStart="7dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginEnd="3dp"
         app:layout_constraintTop_toBottomOf="@+id/buttonVacina"
         tools:layout_constraintLeft_creator="1"
         app:layout_constraintLeft_toLeftOf="parent" />
@@ -111,9 +108,9 @@
         android:layout_height="wrap_content"
         android:id="@+id/guideline2"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.66"
+        app:layout_constraintGuide_percent="0.78"
         tools:layout_editor_absoluteY="0dp"
-        tools:layout_editor_absoluteX="238dp" />
+        tools:layout_editor_absoluteX="281dp" />
 
     <android.support.constraint.Guideline
         android:layout_width="wrap_content"
@@ -138,24 +135,23 @@
         android:layout_height="wrap_content"
         android:id="@+id/guideline6"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.79"
-        tools:layout_editor_absoluteY="404dp"
+        app:layout_constraintGuide_percent="0.8"
+        tools:layout_editor_absoluteY="409dp"
         tools:layout_editor_absoluteX="0dp" />
 
     <ImageView
         android:id="@+id/imageView3"
-        android:layout_width="407dp"
-        android:layout_height="403dp"
-        app:srcCompat="@drawable/zegotinha"
-        app:layout_constraintBottom_toTopOf="@+id/guideline6"
+        android:layout_width="351dp"
+        android:layout_height="match_parent"
+        android:scaleType="fitXY"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="@+id/guideline3"
+        app:layout_constraintRight_toLeftOf="@+id/guideline3"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp"
-        app:layout_constraintVertical_bias="0.0"
-        tools:layout_constraintTop_creator="1"
+        app:srcCompat="@drawable/zegotinha"
         tools:layout_constraintBottom_creator="1"
         tools:layout_constraintLeft_creator="1"
-        android:layout_marginBottom="5dp"
-        app:layout_constraintLeft_toLeftOf="@+id/buttonCadastroUsusario"
-        android:layout_marginLeft="-23dp" />
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintTop_creator="1" />
 
 </android.support.constraint.ConstraintLayout>
