--- a/app/src/main/res/layout/activity_adicionar_vacinas.xml
+++ b/app/src/main/res/layout/activity_adicionar_vacinas.xml
@@ -34,6 +34,7 @@
         tools:layout_constraintRight_creator="1"
         android:layout_marginEnd="77dp"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="157dp"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginTop="170dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginRight="109dp" />
 </android.support.constraint.ConstraintLayout>
