--- a/app/src/main/res/layout/activity_cartao_vacina.xml
+++ b/app/src/main/res/layout/activity_cartao_vacina.xml
@@ -10,16 +10,17 @@
         android:id="@+id/textViewNome"
         android:layout_width="169dp"
         android:layout_height="47dp"
-        android:text="TextView"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintBottom_creator="1"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView"
-        android:layout_marginEnd="82dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="26dp"
         android:layout_marginBottom="22dp"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginEnd="82dp"
+        android:layout_marginTop="26dp"
+        android:text="TextView"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_constraintBottom_creator="1"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintTop_creator="1" />
 
     <Button
         android:id="@+id/buttonVacinaAlterar"
@@ -72,19 +73,19 @@
         android:id="@+id/imageView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:srcCompat="@android:drawable/alert_dark_frame"
-        app:layout_constraintRight_toLeftOf="@+id/textViewNome"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintBottom_creator="1"
-        android:layout_marginStart="16dp"
-        app:layout_constraintBottom_toBottomOf="@+id/buttonVacinaAlterar"
-        android:layout_marginEnd="26dp"
-        android:layout_marginTop="16dp"
-        tools:layout_constraintLeft_creator="1"
         android:layout_marginBottom="26dp"
+        android:layout_marginEnd="26dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintBottom_toBottomOf="@+id/buttonVacinaAlterar"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintRight_toLeftOf="@+id/textViewNome"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@android:drawable/sym_def_app_icon"
+        tools:layout_constraintBottom_creator="1"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintTop_creator="1" />
 
     <Button
         android:id="@+id/buttonRemoverVacina"
