--- a/app/src/main/res/layout/activity_descricao_vacina.xml
+++ b/app/src/main/res/layout/activity_descricao_vacina.xml
@@ -101,10 +101,19 @@
         android:layout_marginBottom="101dp"
         android:layout_marginStart="19dp"
         android:text="TextView"
+        android:textColor="@color/colorPrimary"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         tools:layout_constraintBottom_creator="1"
         tools:layout_constraintLeft_creator="1" />
+
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Clique para saber mais Informações:"
+        tools:layout_editor_absoluteX="25dp"
+        tools:layout_editor_absoluteY="350dp" />
 
 </android.support.constraint.ConstraintLayout>
