--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,88 +11,80 @@
     <Button
         android:id="@+id/buttonVacina"
         style="@style/Widget.AppCompat.Button.Colored"
-        android:layout_width="120dp"
+        android:layout_width="122dp"
         android:layout_height="59dp"
         android:onClick="onClick"
         android:text="Vacina"
         android:textStyle="bold"
-        app:layout_constraintRight_toLeftOf="@+id/guideline3"
         tools:layout_constraintRight_creator="1"
         tools:layout_constraintBottom_creator="1"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/buttonImc"
+        app:layout_constraintRight_toRightOf="parent"
         tools:layout_constraintLeft_creator="1"
-        android:layout_marginBottom="47dp"
-        app:layout_constraintLeft_toLeftOf="@+id/guideline3" />
+        android:layout_marginBottom="52dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <Button
         android:id="@+id/buttonCadastroUsusario"
         style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="59dp"
         android:onClick="onClick"
         android:text="Cad Usuario"
         android:textStyle="bold"
         app:layout_constraintRight_toLeftOf="@+id/buttonVacina"
-        tools:layout_constraintTop_creator="1"
         tools:layout_constraintRight_creator="1"
-        tools:layout_constraintBottom_creator="1"
-        app:layout_constraintBottom_toTopOf="@+id/buttonCartao"
         android:layout_marginStart="3dp"
-        android:layout_marginEnd="3dp"
+        app:layout_constraintBaseline_toBaselineOf="@+id/buttonVacina"
+        tools:layout_constraintBaseline_creator="1"
         tools:layout_constraintLeft_creator="1"
-        android:layout_marginBottom="3dp"
-        app:layout_constraintLeft_toLeftOf="@+id/imageView3"
-        app:layout_constraintTop_toTopOf="@+id/buttonVacina" />
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <Button
         android:id="@+id/buttonLocais"
         android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginEnd="3dp"
-        android:layout_marginStart="3dp"
+        android:layout_height="58dp"
         android:backgroundTint="@color/colorAccent"
         android:onClick="onClick"
         android:text="Locais"
         android:textColor="@android:color/background_light"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/buttonImc"
-        app:layout_constraintLeft_toRightOf="@+id/buttonVacina"
-        app:layout_constraintRight_toRightOf="@+id/buttonImc"
-        app:layout_constraintTop_toTopOf="@+id/buttonVacina"
-        tools:layout_constraintBottom_creator="1"
-        tools:layout_constraintLeft_creator="1"
         tools:layout_constraintRight_creator="1"
-        tools:layout_constraintTop_creator="1" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBaseline_toBaselineOf="@+id/buttonVacina"
+        tools:layout_constraintBaseline_creator="1"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toRightOf="@+id/buttonVacina" />
 
     <Button
         android:id="@+id/buttonImc"
-        android:layout_width="0dp"
-        android:layout_height="48dp"
-        android:layout_marginEnd="6dp"
+        android:layout_width="162dp"
+        android:layout_height="53dp"
         android:onClick="onClick"
         android:text="IMC"
         android:textStyle="bold"
-        app:layout_constraintBaseline_toBaselineOf="@+id/buttonCartao"
-        app:layout_constraintLeft_toRightOf="@+id/buttonCartao"
+        android:layout_marginEnd="21dp"
+        tools:layout_constraintRight_creator="1"
         app:layout_constraintRight_toRightOf="parent"
-        tools:layout_constraintBaseline_creator="1"
-        tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintRight_creator="1" />
+        app:layout_constraintBaseline_toBaselineOf="@+id/buttonCartao"
+        tools:layout_constraintBaseline_creator="1" />
 
     <Button
         android:id="@+id/buttonCartao"
-        android:layout_width="173dp"
+        android:layout_width="0dp"
         android:layout_height="0dp"
         android:onClick="onClick"
         android:text="Cartao"
         android:textStyle="bold"
+        app:layout_constraintRight_toLeftOf="@+id/buttonImc"
         tools:layout_constraintTop_creator="1"
+        tools:layout_constraintRight_creator="1"
         tools:layout_constraintBottom_creator="1"
-        android:layout_marginStart="7dp"
+        android:layout_marginStart="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonVacina"
         tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintLeft_toLeftOf="@+id/buttonCadastroUsusario"
+        app:layout_constraintTop_toTopOf="@+id/guideline4" />
 
     <android.support.constraint.Guideline
         android:layout_width="wrap_content"
@@ -117,9 +109,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/guideline3"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.5"
-        tools:layout_editor_absoluteY="0dp"
-        tools:layout_editor_absoluteX="180dp" />
+        app:layout_constraintGuide_percent="0.49" />
 
     <android.support.constraint.Guideline
         android:layout_width="wrap_content"
@@ -135,23 +125,26 @@
         android:layout_height="wrap_content"
         android:id="@+id/guideline6"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.8"
-        tools:layout_editor_absoluteY="409dp"
+        app:layout_constraintGuide_percent="0.79"
+        tools:layout_editor_absoluteY="404dp"
         tools:layout_editor_absoluteX="0dp" />
 
     <ImageView
         android:id="@+id/imageView3"
-        android:layout_width="351dp"
+        android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp"
         android:scaleType="fitXY"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="@+id/guideline3"
-        app:layout_constraintRight_toLeftOf="@+id/guideline3"
+        app:layout_constraintBottom_toTopOf="@+id/buttonCadastroUsusario"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/zegotinha"
         tools:layout_constraintBottom_creator="1"
-        tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintTop_creator="1" />
+        tools:layout_constraintTop_creator="1"
+        android:layout_marginRight="8dp"
+        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHorizontal_bias="1.0" />
 
 </android.support.constraint.ConstraintLayout>
